@@ -84,8 +84,8 @@ class SchemaDefDataPrepTests(unittest.TestCase):
         #
         self.__fTypeRow = "drop-empty-attributes|drop-empty-tables|skip-max-width|convert-iterables|normalize-enums|translateXMLCharRefs"
         self.__fTypeCol = "drop-empty-tables|skip-max-width|convert-iterables|normalize-enums|translateXMLCharRefs"
-        self.__chemCompMockLen = 15
-        self.__pdbxMockLen = 33
+        self.__chemCompMockLen = 16
+        self.__pdbxMockLen = 36
         # removes timestamped data items to allow diffs.)
         excludeExtras = ["rcsb_load_status"]
         # excludeExtras = []
@@ -135,7 +135,7 @@ class SchemaDefDataPrepTests(unittest.TestCase):
                 "filterType": self.__fTypeRow,
                 "styleType": "rowwise_by_name",
                 "mergeContentTypes": None,
-                "rejectLength": 3,
+                "rejectLength": 4,
             },
         ]
         #
@@ -164,7 +164,7 @@ class SchemaDefDataPrepTests(unittest.TestCase):
                 "filterType": self.__fTypeRow,
                 "styleType": "rowwise_by_name_with_cardinality",
                 "mergeContentTypes": None,
-                "rejectLength": 3,
+                "rejectLength": 4,
                 "excludeExtras": excludeExtras,
             },
             {
@@ -173,7 +173,7 @@ class SchemaDefDataPrepTests(unittest.TestCase):
                 "filterType": self.__fTypeRow,
                 "styleType": "rowwise_by_name_with_cardinality",
                 "mergeContentTypes": ["vrpt"],
-                "rejectLength": 3,
+                "rejectLength": 4,
                 "excludeExtras": excludeExtras,
             },
         ]
