@@ -7,7 +7,7 @@ jsondiff >= 1.2.0
 strict-rfc3339
 mysqlclient >= 1.3.12
 pymongo >= 3.7.0
-mmcif >= 0.46
+mmcif >= 0.47
 rcsb.utils.config >= 0.24
 rcsb.utils.io >= 0.41
 rcsb.utils.multiproc >= 0.13
